# trabajo-de-grado-2

./: Enlace pagina.txt  Literatura.xlsx  README.md  bitacora.txt  exportbd_Cloud_SQL_Export_2024-08-29 (12_52_04).sql  package-lock.json
Back/: .env  app.yaml  config.py  database.py  main.py  pyproject.toml  requirements.txt
Back/db/: readme.md
Back/model/: activity.py  answer.py  comment.py  course.py  debate_topics.py  user.py
Back/service/: activity.py  answer.py  comment.py  course.py  debate_topics.py  user.py
Back/web/: __init__.py  activity.py  answer.py  comment.py  course.py  debate_ia.py  user.py
DataBases/contenido/: Carga.sql  Finanzas_Personales.sql  Fitness.sql  Productividad.sql  Tablas.sql
Proyecto godot/: export_presets.cfg  portal.tscn  project.godot
Proyecto latex/: 00_anteproyecto.aux  00_anteproyecto.bbl  00_anteproyecto.bcf  00_anteproyecto.blg  00_anteproyecto.fdb_latexmk  00_anteproyecto.fls  00_anteproyecto.lof  00_anteproyecto.lot  00_anteproyecto.out  00_anteproyecto.run.xml  00_anteproyecto.tex  00_anteproyecto.toc  01_portada.aux  01_portada.tex  02_contraportada.aux  02_contraportada.tex  03_resumen.tex  04_introduccion.tex  05_formulacion_problema.tex  06_marco_referencial.tex  07_alcance_problema.tex  08_metodologias.tex  09_programa_hitos.tex  10_presupuesto.tex  12_abstract.tex  13_revision_de_literatura.tex  14_desarrollo.tex  15_pruebas.tex  16_resultados.tex  17_conclusiones.tex  18_anexos.tex  Bibliografia.bib
pruebas/: Enlace encuestas.txt  Enlace pruebas usabilidad en voz alta videos.txt
(+170 files in other folders)
