[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.108.0"
uvicorn = "0.25.0"
httpie = "3.2.2"
requests = "2.31.0"
httpx = "0.26.0"
pydantic = "2.5.3"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
